--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 cbpro==1.1.4
+numpy==1.19.4
+pandas==1.1.4
 pymongo==3.5.1
+python-dateutil==2.8.1
 python-dotenv==0.15.0
+pytz==2020.4
 requests==2.13.0
 six==1.10.0
 sortedcontainers==2.3.0
